--- a/index.html
+++ b/index.html
@@ -28,3 +28,13 @@
     </footer>
 </body>
 </html>
+<div class="card-container">
+  <div class="card">
+    <!-- içerik -->
+  </div>
+  <div class="card">
+    <!-- içerik -->
+  </div>
+  ...
+</div>
+
