--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <footer>
         <p>&copy; 2025 Ottoman Lost Professions. All rights reserved.</p>
-        <!-- Feedback Form (Modal) -->
+       
+    </footer>
+    <!-- Feedback Modal -->
 <div id="feedbackModal" class="feedback-modal">
   <div class="feedback-modal-content">
     <span class="feedback-close-button">×</span>
@@ -64,8 +66,13 @@
   </div>
 </div>
 
-<!-- Feedback Button -->
-<button id="openFeedbackModal">Give Feedback</button>
-    </footer>
+<!-- Feedback Icon (Comment Balloon) -->
+<button id="openFeedbackModal" class="feedback-icon">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M21 11.5a8.38 8.38 0 0 1-8.5 8.5 8.38 8.38 0 0 1-8.5-8.5 8.38 8.38 0 0 1 8.5-8.5 8.38 8.38 0 0 1 8.5 8.5z"></path>
+    <path d="M16.5 20.5l-4.5 3v-3h-3"></path>
+  </svg>
+</button>
+
 </body>
 </html>
