--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
         <div class="filters">
             <button data-filter="all" class="active">All</button>
+            <button id="openAboutUsModal" data-filter="about-us">About Us</button> 
             <button data-filter="Profession">Profession</button>
             <button data-filter="Craft">Craft</button>
-            </div>
-        <button id="openAboutUsModal" class="header-button">About Us</button>
+        </div>
     </header>
 
     <main id="grid">
