--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="filters">
             <button data-filter="all" class="active">All</button>
-            <button id="openAboutUsModal" data-filter="about-us">About Us</button> 
+            <button id="openAboutUsModal">About Us</button> 
             <button data-filter="Profession">Profession</button>
             <button data-filter="Craft">Craft</button>
         </div>
@@ -79,6 +79,9 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
+</body>
+</html>
     <script src="script.js"></script>
 </body>
 </html>
