--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="filters">
             <button data-filter="all" class="active">All</button>
             <button id="openAboutUsModal">About Us</button> 
+            <button id="openWhoWeAreModal">Who We Are</button>
             <button data-filter="Profession">Profession</button>
             <button data-filter="Craft">Craft</button>
         </div>
@@ -72,6 +73,66 @@
         </div>
     </div>
 
+    <div id="whoWeAreModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" id="whoWeAreCloseButton">&times;</span>
+            <h2>Who We Are</h2>
+
+            <h3>Nurcan Geçer</h3>
+            <p>I’m Nurcan Geçer. With an interdisciplinary background in sociology and psychology, I am passionately committed to researching collective memory, cultural production, and lost traditions. After completing my undergraduate degree at Istanbul Bilgi University, I am currently pursuing a master's degree in Middle Eastern Studies at Freie Universität Berlin.<br>
+            The Vanished Skills project brings together both my academic interests and my connection to the field. My goal is to trace the labor practices that have not been carried over from the Ottoman era to the present day, drawing attention to cultural memory, community heritage, and local modes of production.<br>
+            📩 <strong>Contact:</strong> nrcn.gcr@gmail.com</p>
+
+            <hr>
+
+            <h3>Ozan Usta</h3>
+            <p>I’m Ozan Usta, a historian with a background in history and art history from Istanbul University. Currently, I’m pursuing a master’s degree in Interdisciplinary Studies of the Middle East at Freie Universität Berlin. My academic work centers on modern Middle Eastern history, historiography, and the politics of heritage.<br>
+            In the Vanished Skills project, I focus on how traditional labor practices reflect broader social and political transformations. My aim is to critically examine how certain skills are preserved, adapted, or abandoned in response to shifts in power, economy, and ideology.<br>
+            📩 <strong>Contact:</strong> ozanu22@gmail.com</p>
+
+            <hr>
+
+            <h3>Burak Can Kaya</h3>
+            <p>I’m Burak Can Kaya, a political science graduate from Hacettepe University with professional experience in humanitarian organizations including the Turkish Red Crescent and IFRC. My work has focused on field coordination, data visualization, and reporting within emergency response contexts. I am currently pursuing my master’s degree in Interdisciplinary Studies of the Middle East at Freie Universität Berlin.<br>
+            The Vanished Skills project aligns with my passion for grassroots knowledge, social memory, and the intersection of craft and community resilience. I believe tracing fading traditions can offer valuable insights for sustainable practices and inclusive narratives that bridge past and present.<br>
+            📩 <strong>Contact:</strong> burakcankaya6@hotmail.com</p>
+        </div>
+    </div>
+
     <script src="script.js"></script>
+
+    <script>
+        // Who We Are modal controls
+        document.getElementById('openWhoWeAreModal').addEventListener('click', function () {
+            document.getElementById('whoWeAreModal').style.display = 'block';
+        });
+
+        document.getElementById('whoWeAreCloseButton').addEventListener('click', function () {
+            document.getElementById('whoWeAreModal').style.display = 'none';
+        });
+
+        window.addEventListener('click', function (event) {
+            const modal = document.getElementById('whoWeAreModal');
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+
+        // About Us modal controls
+        document.getElementById('openAboutUsModal').addEventListener('click', function () {
+            document.getElementById('aboutUsModal').style.display = 'block';
+        });
+
+        document.getElementById('aboutUsCloseButton').addEventListener('click', function () {
+            document.getElementById('aboutUsModal').style.display = 'none';
+        });
+
+        window.addEventListener('click', function (event) {
+            const modal = document.getElementById('aboutUsModal');
+            if (event.target === modal) {
+                modal.style.display = 'none';
+            }
+        });
+    </script>
 </body>
 </html>
